Ensure bottom of the page is visible on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -334,7 +334,7 @@ figure {
   }
 
   #content-wrapper {
-    padding: 0 2rem 0 1rem;
+    padding: 0 2rem 10vh 1rem;
   }
 }
 
